--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.10
 Werkzeug==0.14.1
 wheel==0.24.0
 sqlalchemy==1.4.26
+torch==1.10.0
 git+https://github.com/PrithivirajDamodaran/Styleformer.git
-torch
+
 
